--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "concurrently": "^6.5.1",
     "cross-env": "^7.0.2",
     "d3-timer": "^1.0.10",
+    "emoji-picker-react": "^3.6.0",
     "enzyme": "^3.11.0",
     "framer-motion": "^3.10.6",
     "fscreen": "^1.0.2",
